fix some dimension for tensors

--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -389,10 +389,10 @@
     "    :return: Tuple (input, targets, learning rate)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    numwords = 1000 # not sure about that\n",
-    "    batch_size = 16 # not sure about that\n",
-    "    input_dataset = tf.placeholder(tf.int32, shape=(numwords, batch_size), name='input')\n",
-    "    target_labels = tf.placeholder(tf.int32, shape=(1, batch_size))\n",
+    "    #numwords = 1000 # not sure about that\n",
+    "    #batch_size = 16 # not sure about that\n",
+    "    input_dataset = tf.placeholder(tf.int32, shape=(None, None), name='input')\n",
+    "    target_labels = tf.placeholder(tf.int32, shape=(None, 1))\n",
     "    learning_rate = tf.placeholder(tf.float32, shape=None)\n",
     "    return (input_dataset, target_labels, learning_rate)\n",
     "\n",
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false
    },
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -496,6 +496,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(50, 5)\n",
+      "(50, 5, 256)\n",
       "Tests Passed\n"
      ]
     }
@@ -510,9 +512,12 @@
     "    :return: Embedded input.\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
+    "    print(input_data.get_shape())\n",
     "    # see example at : https://www.tensorflow.org/tutorials/word2vec\n",
     "    embeddings = tf.Variable(tf.random_uniform([vocab_size, embed_dim], -1.0, 1.0))\n",
-    "    return tf.nn.embedding_lookup(embeddings, input_data)\n",
+    "    embed = tf.nn.embedding_lookup(embeddings, input_data)\n",
+    "    print(embed.get_shape())\n",
+    "    return embed\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -538,7 +543,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 105,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from tensorflow.python.ops.rnn import dynamic_rnn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -546,15 +562,12 @@
    },
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "Final state doesn't have the \"name\" attribute.  Try using `tf.identity` to set the name.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-6f8339bbd907>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mDON\u001b[0m\u001b[0;31m'\u001b[0m\u001b[0mT\u001b[0m \u001b[0mMODIFY\u001b[0m \u001b[0mANYTHING\u001b[0m \u001b[0mIN\u001b[0m \u001b[0mTHIS\u001b[0m \u001b[0mCELL\u001b[0m \u001b[0mTHAT\u001b[0m \u001b[0mIS\u001b[0m \u001b[0mBELOW\u001b[0m \u001b[0mTHIS\u001b[0m \u001b[0mLINE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \"\"\"\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0mtests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_build_rnn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbuild_rnn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/home/ubuntu/umooc/tv-script-generation/problem_unittests.py\u001b[0m in \u001b[0;36mtest_build_rnn\u001b[0;34m(build_rnn)\u001b[0m\n\u001b[1;32m    216\u001b[0m         \u001b[0;31m# Check name\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    217\u001b[0m         \u001b[0;32massert\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfinal_state\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'name'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 218\u001b[0;31m             \u001b[0;34m'Final state doesn\\'t have the \"name\" attribute.  Try using `tf.identity` to set the name.'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    219\u001b[0m         \u001b[0;32massert\u001b[0m \u001b[0mfinal_state\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'final_state:0'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    220\u001b[0m             \u001b[0;34m'Final state doesn\\'t have the correct name. Found the name {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfinal_state\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: Final state doesn't have the \"name\" attribute.  Try using `tf.identity` to set the name."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(?, ?, 256)\n",
+      "2\n",
+      "Tests Passed\n"
      ]
     }
    ],
@@ -567,7 +580,20 @@
     "    :return: Tuple (Outputs, Final State)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    outputs, fs = dynamic_rnn(cell, inputs,\n",
+    "                              #sequence_length=None,\n",
+    "                              #initial_state=None,\n",
+    "                              dtype=tf.float32,\n",
+    "                              #parallel_iterations=None,\n",
+    "                              #swap_memory=False, time_major=False,\n",
+    "                              #scope=None,\n",
+    "                             )\n",
+    "    print(inputs.shape)\n",
+    "    print(len(fs))\n",
+    "    #print(type(fs[0]))\n",
+    "    #print(fs[0])\n",
+    "    #print(fs[1])\n",
+    "    return outputs, tf.identity(fs, name='final_state')\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -594,13 +620,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from tensorflow.contrib.layers import fully_connected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "256\n",
+      "(128, 5)\n",
+      "27\n",
+      "(128, 5)\n",
+      "(128, 5, 100)\n",
+      "(128, 5, 100)\n",
+      "2\n",
+      "(128, 5, 256)\n",
+      "(128, 5, 27)\n",
+      "[2, 2, None, 256]\n",
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def build_nn(cell, rnn_size, input_data, vocab_size):\n",
     "    \"\"\"\n",
@@ -612,7 +667,33 @@
     "    :return: Tuple (Logits, FinalState)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    print(rnn_size)\n",
+    "    print(input_data.shape)\n",
+    "    print(vocab_size)\n",
+    "    embed_dim = 100 # WARNING\n",
+    "    batch_size = 128 # WARNING\n",
+    "    embedded_input = get_embed(input_data, vocab_size, embed_dim)\n",
+    "    #cell, initialize_state = get_init_cell(batch_size, rnn_size)\n",
+    "    rnn_outputs, final_state = build_rnn(cell, embedded_input)\n",
+    "    print(rnn_outputs.shape)\n",
+    "    \n",
+    "    if False:\n",
+    "        # Reshape output so it's a bunch of rows, one output row for each step for each batch\n",
+    "        seq_output = tf.concat(rnn_outputs, axis=1)\n",
+    "        output = tf.reshape(seq_output, [-1, rnn_size])\n",
+    "        # Now connect the RNN outputs to a softmax layer\n",
+    "        softmax_w = tf.Variable(tf.truncated_normal((rnn_size, vocab_size), stddev=0.1))\n",
+    "        softmax_b = tf.Variable(tf.zeros(vocab_size))\n",
+    "        # Since output is a bunch of rows of RNN cell outputs, logits will be a bunch\n",
+    "        # of rows of logit outputs, one for each step and batch\n",
+    "        logits = tf.matmul(output, softmax_w) + softmax_b\n",
+    "    else:\n",
+    "        logits = fully_connected(rnn_outputs, vocab_size, activation_fn=None)\n",
+    "    \n",
+    "    print(logits.shape)\n",
+    "    print(final_state.get_shape().as_list())\n",
+    "    \n",
+    "    return (logits, final_state)\n",
     "\n",
     "\n",
     "\"\"\"\n",
