complete model graph and training

--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 99,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -392,7 +392,7 @@
     "    #numwords = 1000 # not sure about that\n",
     "    #batch_size = 16 # not sure about that\n",
     "    input_dataset = tf.placeholder(tf.int32, shape=(None, None), name='input')\n",
-    "    target_labels = tf.placeholder(tf.int32, shape=(None, 1))\n",
+    "    target_labels = tf.placeholder(tf.int32, shape=(None, None))\n",
     "    learning_rate = tf.placeholder(tf.float32, shape=None)\n",
     "    return (input_dataset, target_labels, learning_rate)\n",
     "\n",
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 100,
    "metadata": {
     "collapsed": false
    },
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 101,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -496,8 +496,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(50, 5)\n",
-      "(50, 5, 256)\n",
       "Tests Passed\n"
      ]
     }
@@ -512,11 +510,13 @@
     "    :return: Embedded input.\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    print(input_data.get_shape())\n",
+    "    if False:\n",
+    "        print(input_data.get_shape())\n",
     "    # see example at : https://www.tensorflow.org/tutorials/word2vec\n",
     "    embeddings = tf.Variable(tf.random_uniform([vocab_size, embed_dim], -1.0, 1.0))\n",
     "    embed = tf.nn.embedding_lookup(embeddings, input_data)\n",
-    "    print(embed.get_shape())\n",
+    "    if False:\n",
+    "        print(embed.get_shape())\n",
     "    return embed\n",
     "\n",
     "\n",
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 103,
    "metadata": {
     "collapsed": true
    },
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -565,8 +565,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(?, ?, 256)\n",
-      "2\n",
       "Tests Passed\n"
      ]
     }
@@ -588,11 +586,12 @@
     "                              #swap_memory=False, time_major=False,\n",
     "                              #scope=None,\n",
     "                             )\n",
-    "    print(inputs.shape)\n",
-    "    print(len(fs))\n",
-    "    #print(type(fs[0]))\n",
-    "    #print(fs[0])\n",
-    "    #print(fs[1])\n",
+    "    if False:\n",
+    "        print(inputs.shape)\n",
+    "        print(len(fs))\n",
+    "        #print(type(fs[0]))\n",
+    "        #print(fs[0])\n",
+    "        #print(fs[1])\n",
     "    return outputs, tf.identity(fs, name='final_state')\n",
     "\n",
     "\n",
@@ -620,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 105,
    "metadata": {
     "collapsed": false
    },
@@ -631,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 106,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -642,16 +641,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "256\n",
-      "(128, 5)\n",
-      "27\n",
-      "(128, 5)\n",
-      "(128, 5, 100)\n",
-      "(128, 5, 100)\n",
-      "2\n",
-      "(128, 5, 256)\n",
-      "(128, 5, 27)\n",
-      "[2, 2, None, 256]\n",
       "Tests Passed\n"
      ]
     }
@@ -667,15 +656,17 @@
     "    :return: Tuple (Logits, FinalState)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    print(rnn_size)\n",
-    "    print(input_data.shape)\n",
-    "    print(vocab_size)\n",
+    "    if False:\n",
+    "        print(rnn_size)\n",
+    "        print(input_data.shape)\n",
+    "        print(vocab_size)\n",
     "    embed_dim = 100 # WARNING\n",
     "    batch_size = 128 # WARNING\n",
     "    embedded_input = get_embed(input_data, vocab_size, embed_dim)\n",
     "    #cell, initialize_state = get_init_cell(batch_size, rnn_size)\n",
     "    rnn_outputs, final_state = build_rnn(cell, embedded_input)\n",
-    "    print(rnn_outputs.shape)\n",
+    "    if False:\n",
+    "        print(rnn_outputs.shape)\n",
     "    \n",
     "    if False:\n",
     "        # Reshape output so it's a bunch of rows, one output row for each step for each batch\n",
@@ -690,8 +681,9 @@
     "    else:\n",
     "        logits = fully_connected(rnn_outputs, vocab_size, activation_fn=None)\n",
     "    \n",
-    "    print(logits.shape)\n",
-    "    print(final_state.get_shape().as_list())\n",
+    "    if False:\n",
+    "        print(logits.shape)\n",
+    "        print(final_state.get_shape().as_list())\n",
     "    \n",
     "    return (logits, final_state)\n",
     "\n",
@@ -740,13 +732,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_batches(int_text, batch_size, seq_length):\n",
     "    \"\"\"\n",
@@ -757,7 +768,32 @@
     "    :return: Batches as a Numpy array\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    if False:\n",
+    "        print(len(int_text))\n",
+    "        print(batch_size)\n",
+    "        print(seq_length)\n",
+    "    \n",
+    "    number_of_batches = math.floor(len(int_text)/seq_length/batch_size)\n",
+    "    if False:\n",
+    "        print(number_of_batches)\n",
+    "    \n",
+    "    arr = np.zeros( (number_of_batches, 2, batch_size, seq_length) )\n",
+    "    \n",
+    "    offsets = [] # a debugging variable\n",
+    "    jump = number_of_batches*seq_length\n",
+    "    if False:\n",
+    "        print(jump)\n",
+    "    \n",
+    "    for b in range(number_of_batches):\n",
+    "        for chunk in range(batch_size):\n",
+    "            offset = b*seq_length + chunk*jump\n",
+    "            offsets.append(offset)\n",
+    "            arr[b,0,chunk,:] = int_text[offset:(offset+seq_length)]\n",
+    "            arr[b,1,chunk,:] = int_text[(offset+1):(offset+seq_length+1)]\n",
+    "    \n",
+    "    assert (len(offsets) == len(set(offsets)))\n",
+    "    \n",
+    "    return arr\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -787,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -796,17 +832,17 @@
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "num_epochs = None\n",
+    "num_epochs = 5\n",
     "# Batch Size\n",
-    "batch_size = None\n",
+    "batch_size = 64\n",
     "# RNN Size\n",
-    "rnn_size = None\n",
+    "rnn_size = 128\n",
     "# Sequence Length\n",
-    "seq_length = None\n",
+    "seq_length = 5\n",
     "# Learning Rate\n",
-    "learning_rate = None\n",
+    "learning_rate = 0.01\n",
     "# Show stats for every n number of batches\n",
-    "show_every_n_batches = None\n",
+    "show_every_n_batches = 32\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -827,13 +863,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vocab size :  6779\n",
+      "Tensor(\"Shape:0\", shape=(2,), dtype=int32)\n",
+      "rnn_size : 128\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -843,9 +889,12 @@
     "train_graph = tf.Graph()\n",
     "with train_graph.as_default():\n",
     "    vocab_size = len(int_to_vocab)\n",
+    "    print('vocab size : ', vocab_size)\n",
     "    input_text, targets, lr = get_inputs()\n",
     "    input_data_shape = tf.shape(input_text)\n",
     "    cell, initial_state = get_init_cell(input_data_shape[0], rnn_size)\n",
+    "    print(input_data_shape)\n",
+    "    print('rnn_size :', rnn_size)\n",
     "    logits, final_state = build_nn(cell, rnn_size, input_text, vocab_size)\n",
     "\n",
     "    # Probabilities for generating words\n",
@@ -879,13 +928,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch   0 Batch    0/215   train_loss = 8.823\n",
+      "Epoch   0 Batch   32/215   train_loss = 5.635\n",
+      "Epoch   0 Batch   64/215   train_loss = 5.664\n",
+      "Epoch   0 Batch   96/215   train_loss = 5.270\n",
+      "Epoch   0 Batch  128/215   train_loss = 5.332\n",
+      "Epoch   0 Batch  160/215   train_loss = 4.974\n",
+      "Epoch   0 Batch  192/215   train_loss = 4.740\n",
+      "Epoch   1 Batch    9/215   train_loss = 4.530\n",
+      "Epoch   1 Batch   41/215   train_loss = 4.947\n",
+      "Epoch   1 Batch   73/215   train_loss = 4.410\n",
+      "Epoch   1 Batch  105/215   train_loss = 4.381\n",
+      "Epoch   1 Batch  137/215   train_loss = 4.256\n",
+      "Epoch   1 Batch  169/215   train_loss = 4.346\n",
+      "Epoch   1 Batch  201/215   train_loss = 4.045\n",
+      "Epoch   2 Batch   18/215   train_loss = 3.951\n",
+      "Epoch   2 Batch   50/215   train_loss = 3.821\n",
+      "Epoch   2 Batch   82/215   train_loss = 4.073\n",
+      "Epoch   2 Batch  114/215   train_loss = 3.975\n",
+      "Epoch   2 Batch  146/215   train_loss = 3.961\n",
+      "Epoch   2 Batch  178/215   train_loss = 3.986\n",
+      "Epoch   2 Batch  210/215   train_loss = 3.745\n",
+      "Epoch   3 Batch   27/215   train_loss = 3.745\n",
+      "Epoch   3 Batch   59/215   train_loss = 3.857\n",
+      "Epoch   3 Batch   91/215   train_loss = 3.517\n",
+      "Epoch   3 Batch  123/215   train_loss = 3.346\n",
+      "Epoch   3 Batch  155/215   train_loss = 3.415\n",
+      "Epoch   3 Batch  187/215   train_loss = 3.362\n",
+      "Epoch   4 Batch    4/215   train_loss = 3.423\n",
+      "Epoch   4 Batch   36/215   train_loss = 3.318\n",
+      "Epoch   4 Batch   68/215   train_loss = 3.365\n",
+      "Epoch   4 Batch  100/215   train_loss = 3.591\n",
+      "Epoch   4 Batch  132/215   train_loss = 3.221\n",
+      "Epoch   4 Batch  164/215   train_loss = 3.225\n",
+      "Epoch   4 Batch  196/215   train_loss = 3.208\n",
+      "Model Trained and Saved\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -933,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -960,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1000,13 +1091,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "Test input is wrong tensor",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-124-bdde6c172dc9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mDON\u001b[0m\u001b[0;31m'\u001b[0m\u001b[0mT\u001b[0m \u001b[0mMODIFY\u001b[0m \u001b[0mANYTHING\u001b[0m \u001b[0mIN\u001b[0m \u001b[0mTHIS\u001b[0m \u001b[0mCELL\u001b[0m \u001b[0mTHAT\u001b[0m \u001b[0mIS\u001b[0m \u001b[0mBELOW\u001b[0m \u001b[0mTHIS\u001b[0m \u001b[0mLINE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \"\"\"\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mtests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_get_tensors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mget_tensors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/home/ubuntu/umooc/tv-script-generation/problem_unittests.py\u001b[0m in \u001b[0;36mtest_get_tensors\u001b[0;34m(get_tensors)\u001b[0m\n\u001b[1;32m    267\u001b[0m     \u001b[0;31m# Check correct tensor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    268\u001b[0m     \u001b[0;32massert\u001b[0m \u001b[0minput_text\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mtest_input\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 269\u001b[0;31m         \u001b[0;34m'Test input is wrong tensor'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    270\u001b[0m     \u001b[0;32massert\u001b[0m \u001b[0minitial_state\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mtest_initial_state\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    271\u001b[0m         \u001b[0;34m'Initial state is wrong tensor'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Test input is wrong tensor"
+     ]
+    }
+   ],
    "source": [
     "def get_tensors(loaded_graph):\n",
     "    \"\"\"\n",
