improve translation notebook

--- a/language-translation/dlnd_language_translation.ipynb
+++ b/language-translation/dlnd_language_translation.ipynb
@@ -1058,13 +1058,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def sentence_to_seq(sentence, vocab_to_int):\n",
     "    \"\"\"\n",
@@ -1074,8 +1082,9 @@
     "    :return: List of word ids\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
-    "\n",
+    "    WRDS = sentence.lower().split(' ') # WARNING : to we also need to take care of commas and other signs ?\n",
+    "    IDs = [(vocab_to_int[wrd] if wrd in vocab_to_int else vocab_to_int['<UNK>']) for wrd in WRDS]\n",
+    "    return IDs\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
