--- a/language-translation/dlnd_language_translation.ipynb
+++ b/language-translation/dlnd_language_translation.ipynb
@@ -699,7 +699,7 @@
    "metadata": {},
    "source": [
     "#### Medium post about Chat Bot (code base structure very similar to assigment)\n",
-    "- See blog post : https://tutorials.botsfloor.com/how-to-build-your-first-chatbot-c84495d4622d\n",
+    "- See Medium post from Dave Currie : https://tutorials.botsfloor.com/how-to-build-your-first-chatbot-c84495d4622d\n",
     "\n",
     "#### Git code from MOOC slides\n",
     "- https://github.com/ematvey/tensorflow-seq2seq-tutorials/blob/master/2-seq2seq-advanced.ipynb"
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -762,7 +762,7 @@
     "                                                                    scope=decoding_scope)\n",
     "        else:\n",
     "            # INFO :\n",
-    "            # Adding preset weight of low variance helps training according to Dave Curry blog\n",
+    "            # Adding preset weight of low variance helps training according to Dave Currie Medium post\n",
     "            # Needs formal on/off test\n",
     "            weights = tf.truncated_normal_initializer(stddev=0.1) # lower variance than default TF ?\n",
     "            biases = tf.zeros_initializer()\n",
